[tool.poetry]
name = "llms"
version = "0.1.0"
description = ""
authors = ["gaulgeous <uqdgaul@uq.edu.au>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
transformers = "^4.42.4"
torch = "^2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
